--- a/Environment/py3_env-anaconda.yaml
+++ b/Environment/py3_env-anaconda.yaml
@@ -14,11 +14,11 @@ dependencies:
   - bleach=3.3.0=pyhd3eb1b0_0
   - bottleneck=1.3.2=py38h2a96729_1
   - brotlipy=0.7.0=py38h294d835_1001
-  - ca-certificates=2021.10.8=h5b45459_0
+  - ca-certificates=2022.9.24=h5b45459_0
   - cachetools=4.2.4=pyhd8ed1ab_0
   - cairo=1.16.0=hb19e0ff_1008
   - cairocffi=1.2.0=pyhd8ed1ab_0
-  - certifi=2021.10.8=py38haa244fe_0
+  - certifi=2022.9.24=pyhd8ed1ab_0
   - cffi=1.14.5=py38hcd4344a_0
   - chardet=4.0.0=py38haa244fe_1
   - charset-normalizer=2.0.0=pyhd8ed1ab_0
@@ -84,6 +84,7 @@ dependencies:
   - nbconvert=6.1.0=py38haa95532_0
   - nbformat=5.1.3=pyhd3eb1b0_0
   - nest-asyncio=1.5.1=pyhd3eb1b0_0
+  - networkx=2.8.8=pyhd8ed1ab_0
   - notebook=6.4.0=py38haa95532_0
   - numexpr=2.7.3=py38hb80d3ca_1
   - numpy=1.20.3=py38ha4e8547_0
