--- a/Environment/py3_env-anaconda.yaml
+++ b/Environment/py3_env-anaconda.yaml
@@ -13,6 +13,8 @@ dependencies:
   - blas=1.0=mkl
   - bleach=3.3.0=pyhd3eb1b0_0
   - bottleneck=1.3.2=py38h2a96729_1
+  - brotli=1.0.9=h8ffe710_7
+  - brotli-bin=1.0.9=h8ffe710_7
   - brotlipy=0.7.0=py38h294d835_1001
   - ca-certificates=2022.9.24=h5b45459_0
   - cachetools=4.2.4=pyhd8ed1ab_0
@@ -24,10 +26,12 @@ dependencies:
   - charset-normalizer=2.0.0=pyhd8ed1ab_0
   - colorama=0.4.4=pyhd3eb1b0_0
   - cryptography=3.4.7=py38hd7da0ea_0
+  - cycler=0.11.0=pyhd8ed1ab_0
   - decorator=5.0.9=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
   - entrypoints=0.3=py38_0
   - fontconfig=2.13.1=h1989441_1005
+  - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.10.4=h546665d_1
   - gettext=0.19.8.1=ha2e2712_1008
   - glpk=4.65=h8ffe710_1004
@@ -48,12 +52,21 @@ dependencies:
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - jedi=0.17.0=py38_0
   - jinja2=3.0.1=pyhd3eb1b0_0
+  - jpeg=9e=h8ffe710_2
   - jsonschema=3.2.0=py_2
   - jupyter_client=6.1.12=pyhd3eb1b0_0
   - jupyter_core=4.7.1=py38haa95532_0
   - jupyterlab_pygments=0.1.2=py_0
+  - kiwisolver=1.4.4=py38hbd9d945_0
+  - lcms2=2.12=h2a16943_0
+  - lerc=3.0=h0e60522_0
   - libblas=3.9.0=1_h8933c1f_netlib
+  - libbrotlicommon=1.0.9=h8ffe710_7
+  - libbrotlidec=1.0.9=h8ffe710_7
+  - libbrotlienc=1.0.9=h8ffe710_7
   - libcblas=3.9.0=5_hd5c7e75_netlib
+  - libclang=11.1.0=default_h5c34c98_1
+  - libdeflate=1.10=h8ffe710_0
   - libffi=3.4.2=h0e60522_4
   - libglib=2.70.0=h3be07f2_0
   - libiconv=1.16=he774522_0
@@ -62,14 +75,18 @@ dependencies:
   - libpng=1.6.37=h1d00b33_2
   - libprotobuf=3.18.1=h7755175_0
   - libsodium=1.0.18=h62dcd97_0
+  - libtiff=4.3.0=hc4061b1_4
   - libxml2=2.9.12=hf5bbc77_0
   - libzlib=1.2.11=h8ffe710_1013
+  - lz4-c=1.9.3=h8ffe710_1
   - m2w64-gcc-libgfortran=5.3.0=6
   - m2w64-gcc-libs=5.3.0=7
   - m2w64-gcc-libs-core=5.3.0=7
   - m2w64-gmp=6.1.0=2
   - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
   - markupsafe=2.0.1=py38h2bbff1b_0
+  - matplotlib=3.5.3=py38haa244fe_2
+  - matplotlib-base=3.5.3=py38he529843_0
   - mistune=0.8.4=py38he774522_1000
   - mkl=2021.3.0=haa95532_524
   - mkl-service=2.4.0=py38h2bbff1b_0
@@ -78,6 +95,7 @@ dependencies:
   - mpir=3.0.0=he025d50_1002
   - msys2-conda-epoch=20160418=1
   - multidict=5.2.0=py38h294d835_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - nb_conda=2.2.1=py38_1
   - nb_conda_kernels=2.3.1=py38haa95532_0
   - nbclient=0.5.3=pyhd3eb1b0_0
@@ -89,6 +107,8 @@ dependencies:
   - numexpr=2.7.3=py38hb80d3ca_1
   - numpy=1.20.3=py38ha4e8547_0
   - numpy-base=1.20.3=py38hc2deb75_0
+  - olefile=0.46=pyh9f0ad1d_1
+  - openjpeg=2.5.0=hb211442_0
   - openssl=1.1.1l=h8ffe710_0
   - packaging=21.0=pyhd3eb1b0_0
   - pandas=1.3.3=py38h6214cd6_0
@@ -96,6 +116,7 @@ dependencies:
   - parso=0.8.2=pyhd3eb1b0_0
   - pcre=8.45=h0e60522_0
   - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=8.4.0=py38h794f750_0
   - pip=21.1.3=py38haa95532_0
   - pixman=0.40.0=h8ffe710_0
   - prometheus_client=0.11.0=pyhd3eb1b0_0
@@ -108,6 +129,7 @@ dependencies:
   - pygments=2.9.0=pyhd3eb1b0_0
   - pyopenssl=21.0.0=pyhd8ed1ab_0
   - pyparsing=2.4.7=pyhd3eb1b0_0
+  - pyqt=5.12.3=py38h7ae7562_4
   - pyrsistent=0.17.3=py38he774522_0
   - pysocks=1.7.1=py38haa244fe_3
   - python=3.8.10=hdbf39b2_7
@@ -119,6 +141,7 @@ dependencies:
   - pywin32=227=py38he774522_1
   - pywinpty=0.5.7=py38_0
   - pyzmq=20.0.0=py38hd77b12b_1
+  - qt=5.12.9=h5909a2a_4
   - requests=2.26.0=pyhd8ed1ab_0
   - rsa=4.7.2=pyh44b312d_0
   - send2trash=1.5.0=pyhd3eb1b0_1
@@ -129,6 +152,7 @@ dependencies:
   - terminado=0.9.4=py38haa95532_0
   - testpath=0.5.0=pyhd3eb1b0_0
   - texttable=1.6.4=pyhd8ed1ab_0
+  - tk=8.6.12=h8ffe710_0
   - tornado=6.1=py38h2bbff1b_0
   - traitlets=5.0.5=pyhd3eb1b0_0
   - typing-extensions=3.10.0.2=hd8ed1ab_0
@@ -145,7 +169,13 @@ dependencies:
   - wincertstore=0.2=py38_0
   - winpty=0.4.3=4
   - xmltodict=0.12.0=pyhd3eb1b0_0
+  - xz=5.2.6=h8d14728_0
   - yarl=1.6.3=py38h294d835_2
   - zeromq=4.3.3=ha925a31_3
   - zipp=3.5.0=pyhd3eb1b0_0
   - zlib=1.2.11=h8ffe710_1013
+  - zstd=1.5.2=h6255e5f_1
+  - pip:
+    - pyqt5-sip==4.19.18
+    - pyqtchart==5.12
+    - pyqtwebengine==5.12.1
